fixing misspelled words

--- a/index.html
+++ b/index.html
@@ -71,15 +71,20 @@
           <h3>About Me</h3>
           <h5>Software Engineer</h5>
           <p>
-            Hi all! I'm Alaa. I love traveling, exploring, and playing board games. I enjoy solving problems, building things
-            and have a passion for technology. One day during lunch time in my last job, I asked my coworker
-            who was a programmer to show me some code and how things actually work behind the
-            scenes, this was the moment when I got really excited about learning how to code. When I see
-            and compare myself before and after my graduation from Rithm School, I can't even believe how much I've accomplished.
-            It gave me the knowledge to solve problems that are related to the field and beyond that which is a blessing.
+            Hi all! I'm Alaa. I love traveling, exploring, and playing board games...but most of all, I love having fun!
+            I genuinely enjoy solving problems, building things and have a passion for technology. One day during lunch
+            at my prior job I sat with a co-worker who happened to be a programmer, and we started discussing her
+            career. I asked her to show me some code to get a better understanding of how things work behind the scenes.
+            This was the moment that I just knew I wanted to be a software engineer. The excitement and unbelievable
+            passion for creating something new, along with the challenge of enhancing something current was so
+            gratifying to me. When I look back and compare myself before and after my graduation from Rithm School, I
+            can't believe how much I've accomplished. The hard work and dedication I put in truly gave me the knowledge
+            needed to solve problems, not only from a programming standpoint, but life in general. Overall, I can't help
+            but feel blessed.
           </p>
-          <p>The best thing for me in this field is that there will always be something new to learn and challenges to
-            tackle. I am so looking forward to starting this new journey and learning something different everyday!
+          <p>
+            The most exciting thing about this field to me is that there's always something new to learn and therefore,
+            no limit to personal growth. I can't wait to get starting in this new journey!
           </p>
           <div class="about-social-icons">
             <a href="https://github.com/amohamed90" target="_blank"><i class="fa fa-github fa-lg"></i></a>
@@ -106,7 +111,7 @@
           <ul>
             <li>
               <h5 class="education-h5">Telecommunication Engineering</h5>
-              <div class="school">The Egyptian Russian Univeristy</div>
+              <div class="school">The Egyptian Russian University</div>
             </li>
             <li>
               <h5 class="education-h5">Software Engineering Bootcamp</h5>
