add names to the projects and centered them

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
       <div class="d-flex justify-content-center row">
         <div class="portfolio-container">
           <div class="portfolio-item col-md-6">
+            <h4 class="livestack">LiveStack</h4>
             <div class="item-content">
               <a href="https://livestack.video/" target="_blank"><img class="portfolioImg" src="img/LiveStack.png"
                 alt="portfolio-img"></a>
@@ -214,6 +215,7 @@
         <div class="portfolio-container">
           <div class="portfolio-item col-md-6">
             <div class="item-content">
+              <h4 class="warbler">Warbler</h4>
               <a href="https://warbler90.herokuapp.com/" target="_blank"><img class="portfolioImg"
                 src="img/Warbler.png" alt="portfolio-img"></a>
               <div class="info">
@@ -225,6 +227,7 @@
         <div class="portfolio-container">
           <div class="portfolio-item col-md-6">
             <div class="item-content">
+              <h4 class="jobly">Jobly</h4>
               <a href="https://alaamjoblyfrontend.herokuapp.com/" target="_blank"><img class="portfolioImg"
                 src="img/Jobly.png" alt="portfolio-img"></a>
               <div class="info">
